--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
 <div id="container">
 
-
-
     <div class="frame">
+        <div id="direction">
+            <p id="transDirection">Translation: JAP : KOR</p>
+            <button id="translation">⇆</button>
+        </div>
         <div id="switches">
             <p class="show">Show English</p>
             <input type="checkbox" id="english"
@@ -32,12 +34,11 @@
         <div class="displayedWord">
             <h1 id="word"></h1>
 
-            <p id = englishWord>'word'</p>
-            <p id = polishWord>'word'</p>
+            <p id = englishWord></p>
+            <p id = polishWord></p>
 
         </div>
 
-        </label>
 
 
         <label>Enter your answer</label>
