--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Slawek's webpage</title>
-    <script src="script.js"></script>
+
+    <script defer src="vocabulary.js" type="module" ></script>
+    <script type="module" defer  src="script.js"  ></script>
+    <!--    <script defer src="vocabulary.js" type='module'></script>-->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div id="container">
+<!--    <nav>-->
+<!--        <a href="#">Introduction</a>-->
+<!--        <a href="#">Curriculum Vitae</a>-->
+<!--        <a href="index.html">Korean vocab tool</a>-->
+<!--        <a href="#">Training tool</a>-->
 
+<!--    </nav>-->
     <div class="frame">
         <div id="direction">
             <p id="transDirection">Translation: JAP : KOR</p>
@@ -29,6 +38,9 @@
             </label>
             <p id ="correct" class="nbr"></p> <br>
             <p id="wrong" class="nbr"></p> <br>
+        </div>
+        <div class="words-array-box">
+            <p id="words"></p>
         </div>
 
         <div class="displayedWord">
