--- a/indexMain.html
+++ b/indexMain.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="stylesMain.css">
 </head>
 <body>
-<div class="container">
+<div id="container">
     <nav>
-        <a href="#">Introduction</a>
+        <a href="indexMain.html">Introduction</a>
         <a href="#">Curriculum Vitae</a>
         <a href="index.html">Korean vocab tool</a>
         <a href="#">Training tool</a>
