--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="indexMain.html">Introduction</a>
         <a href="#">Curriculum Vitae</a>
         <a href="index.html">Korean vocab tool</a>
-        <a href="#">Training tool</a>
+        <a href="mapty.html">Training tool</a>
 
     </nav>
     <div class="frame">
@@ -40,7 +40,7 @@
         </div>
 
         <div class="words-array-box">
-            <p id="current-word">Current word:</p> <br>
+            <p id="current-word" class="words-array">Current word:</p> <br>
             <p id="word-1"></p>
             <p id="word-2"></p>
             <p id="word-3"></p>
