--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
         <a href="mapty.html">Training tool</a>
 
     </nav>
-    <div class="frame">
+    <div class="app">
         <div id="control-panel">
             <p id="transDirection">Translation: </p>
             <button id="translation">JAP : KOR</button>
 
-            <p class="show">          Show English</p>
+            <p class="show-lang">          Show English</p>
             <input type="checkbox" id="english"
                    class="checkbox" />
             <label for="english" class="toggle">
                 <p class="onOff">OFF ON</p>
             </label>
-            <p class="show">           Show Polish</p>
+            <p class="show-lang">           Show Polish</p>
             <input type="checkbox" id="polish"
                    class="checkbox" />
             <label for="polish" class="toggle">
@@ -40,7 +40,7 @@
         </div>
 
         <div class="words-array-box">
-            <p id="current-word" class="words-array">Current word:</p> <br>
+            <p id="current-word" class="words-array">Current word:</p>
             <p id="word-1"></p>
             <p id="word-2"></p>
             <p id="word-3"></p>
@@ -61,8 +61,13 @@
 
         </div >
         <div id="answer-box">
-        <label id="enter">Enter your answer</label>
-        <input id="enter-word" type="text">
+<!--        <label id="enter">Enter your answer</label>-->
+          <input
+            id="enter-word"
+            type="text"
+            placeholder="Enter your answer"
+          >
+
         <input id= 'check' type="button" value="Check">
         </div>
         <h2 id="feedback"></h2>
