--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <title>Slawek's webpage</title>
 
-    <script defer src="vocabulary.js" type="module" ></script>
-    <script type="module" defer  src="script.js"  ></script>
+    <script defer src="vocabulary.js" type="module"></script>
+    <script type="module" defer src="script.js"></script>
     <!--    <script defer src="vocabulary.js" type='module'></script>-->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div id="container">
-    <nav>
+    <!--<nav>
         <a href="indexMain.html">Introduction</a>
         <a href="#">Curriculum Vitae</a>
         <a href="index.html">Korean vocab tool</a>
@@ -23,19 +23,19 @@
             <p id="transDirection">Translation: </p>
             <button id="translation">JAP : KOR</button>
 
-            <p class="show-lang">          Show English</p>
+            <p class="show-lang"> Show English</p>
             <input type="checkbox" id="english"
-                   class="checkbox" />
+                   class="checkbox"/>
             <label for="english" class="toggle">
                 <p class="onOff">OFF ON</p>
             </label>
-            <p class="show-lang">           Show Polish</p>
+            <p class="show-lang"> Show Polish</p>
             <input type="checkbox" id="polish"
-                   class="checkbox" />
+                   class="checkbox"/>
             <label for="polish" class="toggle">
                 <p class="onOff">OFF ON</p>
             </label>
-            <p id ="correct" class="nbr"></p>
+            <p id="correct" class="nbr"></p>
             <p id="wrong" class="nbr"></p>
         </div>
 
@@ -56,22 +56,22 @@
         <div class="displayedWord">
             <h1 id="word"></h1>
 
-            <p id = englishWord></p>
-            <p id = polishWord></p>
+            <p id=englishWord></p>
+            <p id=polishWord></p>
 
-        </div >
+        </div>
         <div id="answer-box">
-<!--        <label id="enter">Enter your answer</label>-->
-          <input
-            id="enter-word"
-            type="text"
-            placeholder="Enter your answer"
-          >
+            &lt;!&ndash;        <label id="enter">Enter your answer</label>&ndash;&gt;
+            <input
+                    id="enter-word"
+                    type="text"
+                    placeholder="Enter your answer"
+            >
 
-        <input id= 'check' type="button" value="Check">
+            <input id='check' type="button" value="Check">
         </div>
         <h2 id="feedback"></h2>
-</div>
+    </div>-->
 </div>
 </body>
 </html>
