fixed body height

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div id="container">
-    <!--<nav>
+    <nav>
         <a href="indexMain.html">Introduction</a>
         <a href="#">Curriculum Vitae</a>
         <a href="index.html">Korean vocab tool</a>
@@ -61,7 +61,7 @@
 
         </div>
         <div id="answer-box">
-            &lt;!&ndash;        <label id="enter">Enter your answer</label>&ndash;&gt;
+            <!--        <label id="enter">Enter your answer</label>-->
             <input
                     id="enter-word"
                     type="text"
@@ -71,7 +71,7 @@
             <input id='check' type="button" value="Check">
         </div>
         <h2 id="feedback"></h2>
-    </div>-->
+    </div>
 </div>
 </body>
 </html>
