--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="container">
     <nav>
         <a href="indexMain.html">Introduction</a>
-        <a href="#">Curriculum Vitae</a>
+        <a href="#">Forkify</a>
         <a href="index.html">Korean vocab tool</a>
         <a href="Mapty/mapty.html">Training tool</a>
 
