--- a/indexMain.html
+++ b/indexMain.html
@@ -11,7 +11,7 @@
 <div id="container">
     <nav>
         <a href="indexMain.html">Introduction</a>
-        <a href="#">Curriculum Vitae</a>
+        <a href="#">Forkify</a>
         <a href="index.html">Korean vocab tool</a>
         <a href="#">Training tool</a>
 
